# ML_mod_3_HW

./: authors.json  our_script.py  pyproject.toml
mod3_HW_qoutes/: scrapy.cfg
mod3_HW_qoutes/mod3_HW_qoutes/: items.py  middlewares.py  pipelines.py  settings.py
mod3_HW_qoutes/mod3_HW_qoutes/spiders/: get_quotes.py
