[tool.poetry]
name = "ml-mod-3-hw"
version = "0.1.0"
description = ""
authors = ["Serhii-SA <serg.a.tolstov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.1"
pymongo = "^4.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
